# parasolid-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  re.md
.cargo/: config.toml
crates/parasolid/: Cargo.toml
crates/parasolid-sys/: Cargo.toml  pk_exports.txt
crates/parasolid-sys/docs/: ffi-missing.md
crates/parasolid-sys/docs/api/: 00-overview.md  01-session-lifecycle-and-memory.md  02-entity-types-and-hierarchy.md  03-error-handling-and-safety.md  04-geometry-and-operations.md  05-rust-wrapper-patterns.md
crates/parasolid-sys/src/: assembly.rs  attrib.rs  bgeom.rs  blend.rs  boolean.rs  checking.rs  class.rs  debug.rs  distance.rs  editing.rs  enquiry.rs  error.rs  euler.rs  facet.rs  fileio.rs  frame.rs  frustrum.rs  generated_stubs.rs  geometry.rs  lattice.rs  lib.rs  mass.rs  offset.rs  partition.rs  session.rs  sheet.rs  sweep.rs  topology.rs  transform.rs  types.rs
crates/parasolid-test/: Cargo.toml  test_minimal.c
docs/: api-ontology.md  api-unexercised-reference.md  ffi-missing.md  pskernel-solidworks.md
docs/v35-chapters/: di_chap.02.html  di_chap.03.html  di_chap.04.html  di_chap.05.html  di_chap.06.html  di_chap.07.html  di_chap.08.html  di_chap.09.html  di_chap.10.html  di_chap.11.html  di_chap.12.html  di_chap.13.html  di_chap.14.html  di_chap.15.html  di_chap.16.html  di_chap.18.html  fd_chap.002.html  fd_chap.003.html  fd_chap.004.html  fd_chap.005.html  fd_chap.006.html  fd_chap.007.html  fd_chap.008.html  fd_chap.009.html  fd_chap.010.html  fd_chap.011.html  (+136 more)
journal_test_out/: session.jnl
scripts/: scrub-proprietary-binaries.sh
(+330 files in other folders)
