[package]
name = "parasolid-sys"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Raw FFI bindings for the Parasolid PK_* C API"

[features]
default = []
# Enable runtime loading via libloading (requires pskernel.dll at runtime)
runtime = ["dep:libloading"]

[dependencies]
libloading = { version = "0.8", optional = true }
